[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "steady"
version = "0.1.0"
description = "AI-native fault-tolerant Python runtime. Spiritual successor to fuckit.py."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "steady contributors" },
]
keywords = [
    "fault-tolerance",
    "error-handling",
    "ai",
    "llm",
    "openai",
    "anthropic",
    "runtime",
    "fuckit",
    "resilience",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Fault Tolerance",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
openai = [
    "openai>=1.0.0",
]
anthropic = [
    "anthropic>=0.18.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
]

[project.urls]
Homepage = "https://github.com/egg886/steady"
Repository = "https://github.com/egg886/steady"
Documentation = "https://github.com/egg886/steady#readme"
"Bug Tracker" = "https://github.com/egg886/steady/issues"

[project.scripts]
steady = "steady.__main__:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
steady = ["py.typed"]

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "RUF", # ruff-specific
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "B011",  # Do not assert False - intentional in fault-tolerance tests
    "F841",  # Unused variables - steady is designed to handle buggy code
    "F821",  # Undefined names - steady is designed to handle buggy code
]
"examples/*" = [
    "F841",    # Unused variables - examples intentionally contain bugs for steady to fix
    "F821",    # Undefined names - examples intentionally contain bugs for steady to fix
    "RUF001",  # Ambiguous Unicode in strings - Chinese catchphrase is intentional
    "RUF002",  # Ambiguous Unicode in docstrings - Chinese catchphrase is intentional
    "RUF003",  # Ambiguous Unicode in comments - Chinese catchphrase is intentional
]

# MyPy configuration
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["openai.*", "anthropic.*"]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra -q"

[tool.coverage.run]
source = ["steady"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
